<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.darkhawx.language.project_s.Reviews.ReviewSummaryActivity">

    <TextView
        android:id="@+id/cardSetName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="Card Set Name"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSetName"
        android:id="@+id/linearLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/numCorrectText"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/review_summary_num_correct"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="126dp" />

        <TextView
            android:id="@+id/numIncorrectText"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/review_summary_num_incorrect"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="@+id/numCorrectText"
            tools:layout_editor_absoluteX="112dp" />

        <TextView
            android:id="@+id/numTotalAttempted"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/review_summary_total"
            app:layout_constraintTop_toTopOf="@+id/percentageCorrect"
            tools:layout_editor_absoluteX="303dp" />

        <TextView
            android:id="@+id/percentageCorrect"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/review_summary_per_correct"
            app:layout_constraintTop_toTopOf="@+id/numIncorrectText"
            tools:layout_editor_absoluteX="207dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/correctText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.0"
            android:gravity="start"
            android:text="@string/review_summary_correct"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/correctList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1.0"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correctText">

        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/incorrectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/review_summary_incorrect"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/correctList" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/incorrectList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1.0"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/incorrectText">

        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
